WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183262
Fix some errors due to some mach port APIs being unavailable on watchOS
https://bugs.webkit.org/show_bug.cgi?id=183262
Summary
Fix some errors due to some mach port APIs being unavailable on watchOS
Wenson Hsieh
Reported
2018-03-01 14:24:35 PST
<
rdar://problem/38028521
>
Attachments
Patch
(2.94 KB, patch)
2018-03-01 14:38 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-03-01 14:38:17 PST
Created
attachment 334854
[details]
Patch
WebKit Commit Bot
Comment 2
2018-03-01 15:11:51 PST
Comment on
attachment 334854
[details]
Patch Clearing flags on attachment: 334854 Committed
r229148
: <
https://trac.webkit.org/changeset/229148
>
WebKit Commit Bot
Comment 3
2018-03-01 15:11:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug