Fix some errors due to some mach port APIs being unavailable on watchOS https://bugs.webkit.org/show_bug.cgi?id=183262 <rdar://problem/38028521>

Reviewed by Tim Horton.

Minor build fix; mach_port_guard and mach_port_unguard are not available on this platform.

* Platform/IPC/mac/ConnectionMac.mm:
(IPC::Connection::platformInvalidate):
(IPC::Connection::platformInitialize):
(IPC::Connection::open):


Canonical link: https://commits.webkit.org/198935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229148 268f45cc-cd09-0410-ab3c-d52691b4dbfc